crates/talkbank-direct-parser/tests/snapshots/offset_tests__chumsky_map_with_captures_offset.snap
---
source: talkbank-direct-parser/tests/offset_tests.rs
expression: "(word, errors.into_vec())"
---
(
    Some(
        Word {
            span: Span {
                start: 50,
                end: 55,
            },
            word_id: None,
            raw_text: "hello",
            cleaned_text: "hello",
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "hello",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            untranscribed: None,
            lang: None,
            part_of_speech: None,
        },
    ),
    [],
)
