crates/talkbank-direct-parser/tests/snapshots/offset_tests__parse_main_tier_with_offset.snap
---
source: talkbank-direct-parser/tests/offset_tests.rs
expression: "(main, errors.into_vec())"
---
(
    Some(
        MainTier {
            speaker: SpeakerCode(
                "CHI",
            ),
            content: TierContent {
                linkers: TierLinkers(
                    [],
                ),
                language_code: None,
                content: TierContentItems(
                    [
                        Word(
                            Word {
                                span: Span {
                                    start: 206,
                                    end: 211,
                                },
                                word_id: None,
                                raw_text: "hello",
                                cleaned_text: "hello",
                                content: WordContents(
                                    [
                                        Text(
                                            WordText(
                                                NonEmptyString(
                                                    "hello",
                                                ),
                                            ),
                                        ),
                                    ],
                                ),
                                category: None,
                                form_type: None,
                                untranscribed: None,
                                lang: None,
                                part_of_speech: None,
                            },
                        ),
                        Word(
                            Word {
                                span: Span {
                                    start: 212,
                                    end: 217,
                                },
                                word_id: None,
                                raw_text: "world",
                                cleaned_text: "world",
                                content: WordContents(
                                    [
                                        Text(
                                            WordText(
                                                NonEmptyString(
                                                    "world",
                                                ),
                                            ),
                                        ),
                                    ],
                                ),
                                category: None,
                                form_type: None,
                                untranscribed: None,
                                lang: None,
                                part_of_speech: None,
                            },
                        ),
                    ],
                ),
                terminator: Some(
                    Period,
                ),
                postcodes: TierPostcodes(
                    [],
                ),
                bullet: None,
                content_span: None,
            },
            span: Span {
                start: 200,
                end: 219,
            },
            speaker_span: Span {
                start: 201,
                end: 204,
            },
        },
    ),
    [],
)
