crates/talkbank-direct-parser/tests/snapshots/offset_tests__parse_word_offset_zero.snap
---
source: talkbank-direct-parser/tests/offset_tests.rs
expression: "(word, errors.into_vec())"
---
(
    Some(
        Word {
            span: Span {
                start: 0,
                end: 5,
            },
            word_id: None,
            raw_text: "hello",
            cleaned_text: "hello",
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "hello",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            untranscribed: None,
            lang: None,
            part_of_speech: None,
        },
    ),
    [],
)
